# kn_nav

./: .gitignore  BUILD_NOTES.md  README.md
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/: CMakeLists.txt  package.xml
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/config/: loc_param_g1.yaml  loc_param_g1_local.yaml  loc_param_g1_unitree.yaml
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/include/: global_localization.h
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/include/open3d_conversions/: DpgtConversions.h  RosConversions.h  open3d_conversions.h
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/include/open3d_registration/: open3d_registration.h
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/launch/: local_localization_3d_g1.launch.py  localization_3d_g1.launch.py  open3d_loc_g1.launch.py  unitree_localization_3d_g1.launch.py  unitree_open3d_loc_g1.launch.py
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/rviz_cfg/: fastlio.rviz
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/src/: global_localization.cpp  localization_service_node.cpp
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/src/open3d_conversions/: open3d_conversions.cpp
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/src/open3d_registration/: open3d_registration.cpp
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/srv/: PoseDeviation.srv  Relocalize.srv
src/FastDEM/fastdem/: CMakeLists.txt  package.xml
src/FastDEM/fastdem/benchmarks/: benchmark_height_update.cpp  build.sh
src/FastDEM/fastdem/cmake/: fastdemConfig.cmake.in
src/FastDEM/fastdem/config/: default.yaml  global_mapping.yaml  postprocess.yaml
src/FastDEM/fastdem/examples/: CMakeLists.txt  README.md
src/FastDEM/fastdem/examples/01_hello_mapping/: CMakeLists.txt  main.cpp
src/FastDEM/fastdem/examples/02_config_loading/: CMakeLists.txt  main.cpp
src/FastDEM/fastdem/examples/common/: data_loader.hpp  (+2 more)
src/FastDEM/fastdem/src/: config_fastdem.cpp  config_postprocess.cpp  elevation_mapping.cpp  fastdem.cpp  feature_extraction.cpp  inpainting.cpp  io_npz.cpp  io_png.cpp  pcd_convert.cpp  raycasting.cpp  sensor_model.cpp  uncertainty_fusion.cpp
src/FastDEM/fastdem/tests/: CMakeLists.txt  test_config.cpp  test_dual_layer.cpp  test_elevation_map.cpp  test_fastdem_integration.cpp  test_kalman_estimation.cpp  test_map_io.cpp  test_online_mode.cpp  test_postprocess.cpp  test_quantile_estimation.cpp  test_rasterization.cpp  test_sensor_models.cpp
src/FastDEM/fastdem/tools/: CMakeLists.txt  pcd2dem.cpp
src/FastDEM/ros1/: CMakeLists.txt  COLCON_IGNORE  package.xml
src/FastDEM/ros1/config/: global_mapping.yaml  local_mapping.yaml
src/FastDEM/ros1/launch/: run.launch
src/FastDEM/ros1/src/: fastdem_ros_node.cpp
src/FastDEM/ros2/: CMakeLists.txt  package.xml
src/FastDEM/ros2/config/: global_mapping.yaml
src/FastDEM/ros2/launch/: run.launch.py
src/FastDEM/ros2/src/: fastdem_ros_node.cpp
src/PCT_planner/: CMakeLists.txt  PARAMETERS.md  README.md  SETUP.md  package.xml  run_ros2_interactive.py  run_ros2_interactive_without_cuda.py  without_cuda_launch_ros2.sh
src/PCT_planner/launch/: pct_global_planner.launch.py
src/PCT_planner/planner/: build.sh  build_thirdparty.sh
src/PCT_planner/planner/config/: param.py
src/PCT_planner/planner/lib/: CMakeLists.txt  a_star.pyi  ele_planner.pyi
src/PCT_planner/planner/scripts/: plan_click_rviz2.py  plan_ros2.py  plan_standalone.py  planner_wrapper.py
src/PCT_planner/rsc/rviz/: pct_ros2.rviz
src/PCT_planner/scripts/: launch_ros2.sh  run_clinic.sh  run_global_planner.sh  run_ros2_global_planner  run_ros2_global_planner.py  run_ros2_global_planner_wrapper  run_ros2_interactive.py
src/PCT_planner/tomography/config/: __init__.py  prototype.py  scene_clinic.py
src/PCT_planner/tomography/scripts/: kernels.py  run_ros2.py  run_standalone.py
src/art_planner/art_planner/: CMakeLists.txt  package.xml
src/art_planner/art_planner/src/: start.cpp
src/art_planner/art_planner_motion_cost/: CMakeLists.txt  README.md  package.xml  setup.py
src/art_planner/art_planner_motion_cost/config/: config.yaml
src/art_planner/art_planner_motion_cost/launch/: cost_query_server.launch.py
src/art_planner/art_planner_motion_cost/scripts/: cost_query_server.py
src/art_planner/art_planner_motion_cost/srv/: CostQuery.srv
src/art_planner/art_planner_msgs/: CMakeLists.txt  package.xml
src/art_planner/art_planner_ros/: CMakeLists.txt  package.xml
src/art_planner/art_planner_ros/config/: params.yaml
src/art_planner/art_planner_ros/launch/: art_planner.launch.py
src/art_planner/art_planner_ros/scripts/: path_follower.py  plan_to_goal_client.py
src/art_planner/art_planner_ros/src/: converter.cpp  planner_ros.cpp  planner_ros_node.cpp  utils.cpp  visualizer.cpp
src/art_planner/ode/: package.xml
src/pct_art_local_navigation/: README.md  package.xml  setup.cfg  setup.py
src/pct_art_local_navigation/config/: coordinator.yaml  fastdem_local_mapping.yaml  pure_pursuit_local.yaml
src/pct_art_local_navigation/config/local/: fastdem_local_mapping.yaml  go2_bridge_local.yaml  open3d_loc.yaml  pct_global_planner.yaml  pure_pursuit_local.yaml  traversability_robot_filter.yaml
src/pct_art_local_navigation/config/unitree/: art_local.yaml  coordinator.yaml  pct_global_planner.yaml  traversability_robot.yaml
src/pct_art_local_navigation/launch/: local_pct_art_local_navigation.launch.py  pct_art_local_navigation.launch.py  unitree_pct_art_local_navigation.launch.py
src/pct_art_local_navigation/pct_art_local_navigation/: __init__.py  coordinator_logic.py  coordinator_node.py  path_smoothing.py
src/pct_art_local_navigation/test/: test_coordinator_logic.py  test_coordinator_node.py  test_launch_contract.py  test_path_smoothing.py
src/pct_nav2_bridge/: CMakeLists.txt  package.xml
src/pct_nav2_bridge/launch/: bridge_only.launch.py  bringup.launch.py  nav2_controller.launch.py  pure_pursuit.launch.py
src/pct_nav2_bridge/params/: nav2_controller_params.yaml
src/pct_nav2_bridge/pct_nav2_bridge/: bridge_node.py  pure_pursuit_follower.py
src/pct_nav2_bridge/scripts/: bridge_node  pure_pursuit_follower
(+243 files in other folders)
