<?xml version="1.0"?>
<package format="3">
  <name>pct_planner</name>
  <version>0.1.0</version>
  <description>
    PCT Global Planner — Point Cloud Tomography based 3D global path planning.
    Publishes /pct_path (nav_msgs/Path) from robot pose (TF) to goal point.
  </description>

  <maintainer email="xuqiang656@example.com">xuqiang656</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
