<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pct_art_local_navigation</name>
  <version>0.1.0</version>
  <description>PCT global path to ART local planning coordinator and Go2 bringup.</description>
  <maintainer email="xuqiang656@example.com">xuqiang656</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>art_planner_msgs</exec_depend>
  <exec_depend>art_planner_ros</exec_depend>
  <exec_depend>fastdem_ros2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pct_planner</exec_depend>
  <exec_depend>pure_pursuit_planner</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>traversability_estimation</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
