<?xml version="1.0"?>
<package format="3">
  <name>pct_nav2_bridge</name>
  <version>0.1.0</version>
  <description>
    Bridge node that receives /pct_path (nav_msgs/Path) from PCT planner
    and dispatches it to Nav2 ControllerServer via FollowPath action.
    Nav2 only handles path tracking → /cmd_vel, no global planning.
  </description>

  <maintainer email="xuqiang656@example.com">xuqiang656</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
