<?xml version="1.0"?>
<package format="2">
  <name>fastdem</name>
  <version>0.3.1</version>
  <description>FastDEM - Fast Digital Elevation Mapping library</description>

  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>

  <!-- Pure CMake build (not catkin) -->
  <buildtool_depend>cmake</buildtool_depend>

  <!-- System dependencies -->
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>spdlog</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
