<?xml version="1.0"?>
<package format="3">
  <name>art_planner</name>
  <version>0.0.0</version>
  <description>The art_planner package</description>

  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="lorenwel@ethz.ch">Lorenz Wellhausen</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>ompl</depend>
  <depend>ODE</depend>
  <depend>opencv</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
