<?xml version="1.0"?>
<package format="3">
  <name>art_planner_motion_cost</name>
  <version>0.0.0</version>
  <description>The art_planner_motion_cost package</description>

  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
