<?xml version="1.0"?>
<package format="3">
  <name>art_planner_ros</name>
  <version>0.0.0</version>
  <description>The art_planner_ros package</description>

  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="lorenwel@ethz.ch">Lorenz Wellhausen</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>art_planner</depend>
  <depend>art_planner_motion_cost</depend>
  <depend>art_planner_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
